# dotnet-muxer

./: .gitignore  Cargo.toml  Makefile  README.md  dotnet-muxer.sln  install.ps1  install.sh  run.ps1  run.sh
app/: Cargo.toml
dotnet/: DarwinHelper.cs  DotnetMuxer.csproj  LinuxHelper.cs  LogEntry.cs  LogHelper.cs  Program.cs  WindowsHelper.cs
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: dispatch.rs  logger.rs  main.rs  resolver.rs
src/DotnetMuxer/: DispatchHelper.cs  DotnetMuxer.csproj  LinuxHelper.cs  LogHelper.cs  Program.cs
src/logger/: fallback.rs  linux.rs  macos.rs  platform.rs  windows.rs
vscode-extension/: extension.js  package.json
