[package]
name = "dotnet-muxer"
version = "0.3.0"
edition = "2021"
description = "A smart dispatcher that routes dotnet invocations to the right runtime/SDK based on context"

[[bin]]
name = "dotnet"
path = "src/main.rs"

[dependencies]
time = { version = "0.3", features = ["formatting"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
